# database

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  MANIFEST.in  Output_data TAS-FRA-007(2).csv  README.md  T022.py  T022_TAS_VEP_017.ipynb  T023.py  T023_TAS_FRA_007(2).ipynb  T911.py  T912.py  T913.py  T914.py  conftest.py  master dataset.csv  merg_cleaned_data_output_data.csv  merging_data.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: 0-pytest.yaml  cq.yml  lint.yaml  lint.yml  publish.yaml  pytest.yaml  pytest.yml  qc.yml
R/: README.md  run  test
R/item/: .gitignore  DESCRIPTION  NAMESPACE
R/item/R/: cli.R  common.R  compute_elasticities.R  constants.R  correct_bp.R  correct_eia.R  correct_get.R  correct_itf.R  correct_message.R  correct_momo.R  correct_roadmap.R  correct_statoil.R  item.R  model-.R  model-downscale.R
R/item/man/: aggregate_all_permutations.Rd  aggregate_item_regions.Rd  approx_fun.Rd  assign_socioeconomic_scenario.Rd  compute_country_shares.Rd  compute_elasticities.Rd  compute_global_totals.Rd  correct_bp.Rd  correct_eia.Rd  correct_get.Rd  correct_itf.Rd  correct_message.Rd  correct_momo.Rd  correct_preprocessed_data.Rd  correct_roadmap.Rd  correct_statoil.Rd  derive_variables.Rd  downscale_flow_variables.Rd  extract_global_data_to_df.Rd  find_data_file.Rd  generate_ds_proxy_data.Rd  get_country_region_map.Rd  get_variable_mapping.Rd  load_country_region_mappings.Rd  load_data_file.Rd  load_model_data.Rd  load_preprocessed_data.Rd  load_roadmap_tech_mapping.Rd  perform_item_data_processing.Rd  prepare_preprocessed_data.Rd  prepare_transportenergy_t0_data.Rd  remove_redundant_alls.Rd  repeat_add_columns.Rd  save_output.Rd
R/item/tests/: testthat.R
ci/: before-install.sh  before_install.sh  codecov.yml  coveragerc  install.sh  item-historical-database-d0b06349d741.json.enc  rclone.conf  requirements.txt
data/: concepts.yaml  measures.yaml  spec.yaml
data/model/: models.yaml
data/model/dimensions/: match.yaml  mode.yaml  technology.yaml
data/model/eppa5/: regions-base.yaml  regions.yaml  scenarios.yaml
data/model/eppa6/: regions.yaml
data/model/exxonmobil/: regions.yaml
data/model/gcam/: scenarios.yaml
data/model/get/: scenarios.yaml
data/model/itf/: regions.yaml
data/model/message/: regions.yaml  scenarios.yaml
data/model/momo/: regions.yaml  scenarios.yaml
data/model/roadmap/: regions.yaml  scenarios.yaml
data/model/statoil/: scenarios.yaml
dima/: ATO Workbook (TRANSPORT ACTIVITY & SERVICES (TAS))2023.xlsx  ATO matching.xlsx  Output_data TAS-FRA-005(2).csv  Output_data_TAS-PAG-005(2).csv  Output_data_TAS-PAT-017(1).csv  Output_data_TAS-VEP-005(2).csv  Summary.md  T011.py  T011_TAS-PAT-017(1).ipynb  T012.py  T012_TAS-FRA-005(2).ipynb  T013.py  T013_TAS-PAG-005(2).ipynb  T014.py  T014_TAS-VEP-005(2).ipynb  final_clean_output_data.csv  merging_master_data.ipynb  regions.yaml  requirements.txt  sources.yaml
doc/: ci.rst  cli.rst  common.rst  conf.py  developing.rst  glossary.rst  historical.rst  index.rst  metadata.rst  model.rst  reference.rst  remote.rst  repro.rst  stats.rst  structure.rst  usage.rst  whatsnew.rst
doc/historical/: diagnostic.rst  input.rst  overview.rst
doc/model/: common.rst  dimensions.rst  mip2.rst  plot.rst
item/: __init__.py  cli.py  common.py  logging.yaml  openkapsarc.py  sdmx.py  structure.py  util.py  utils.py
item/hanna/: Summary.md  T015_TAS-FRA-005(3).ipynb  T016_TAS-VEP-005(1).ipynb  T017_TAS-VEP-020.ipynb  merged_cleaned_master_output_data.csv  output_data_TAS-FRA-005(3).csv  output_data_TAS-VEP-005(1).csv  output_data_TAS-VEP-020.csv
item/historical/: T000.py  T001.py  T002.py  T003.py  T004.py  T005.py  T006.py  T007.py  T008.py  T009.py  T010.py  T011.py  T012.py  T013.py  T014.py  T015.py  T016.py  T017.py  T018.py  T019.py  T020.py  T021.py  T022.py  T023.py  __init__.py  cli.py  diagnostic.py  legacy.py  prueba.py  requirements.txt  sources_for_T015_T016_T017.yaml  util.py
item/historical/cleaning Scripts/: DatasetMerger.ipynb  T000.ipynb  T004.ipynb
item/historical/diagnostic/: A001.py  A002.py  A003.py  __init__.py
item/historical/scripts/: DatasetMerger.ipynb  S012.ipynb  T000.ipynb  T000.py  T001.ipynb  T001.py  T002.ipynb  T002.py  T003.ipynb  T003.py  T004.ipynb  T004.py  T005.ipynb  T006.ipynb  T006.py  T007.ipynb  T007.py  T008.ipynb  T008.py  T009.ipynb  T009.py  T010.ipynb  T010.py  T012.py  __init__.py
item/model/: __init__.py  bp.py  cli.py  common.py  dimensions.py  eia.py  eppa5.py  exxonmobil.py  gcam.py  get.py  itf.py  message.py  momo.py  plot.py  roadmap.py  shell.py  statoil.py  structure.py
item/remote/: __init__.py  cli.py  openkapsarc.py  sdmx.py  sdmx_from_file.py
item/serah/: Summary.md  T018-TAS-FRA-004(2).py  T018_TAS-FRA-004(2).ipynb  T019-TAS-FRA-007(3).py  T019_TAS-FRA-007(3).ipynb  T020-TAS-VEP-018.py  T020_TAS-VEP-018.ipynb  master dataset.csv  merge_to_master_data.ipynb  merged_cleaned_output_files.csv  output_data_TAS-FRA-004(2).csv  output_data_TAS-FRA-007(3).csv  output_data_TAS-VEP-018.csv  requirements.txt
item/serah/config/: sources.yaml
item/structure/: __init__.py  base.py  common.py  sdmx.py  template.py
item/tests/: conftest.py  test_cli.py  test_common.py  test_dimensions.py  test_historical.py  test_model.py  test_openkapsarc.py  test_structure.py
python/: .gitignore  MANIFEST.in  README.md  run  setup.cfg  setup.py
python/item/: __main__.py  cli.py  common.py  openkapsarc.py  utils.py
python/item/data/: item_config_example.yaml  spec.yaml
python/item/historical/: __init__.py  __main__.py  cli.py  mapping_conv_phase1.yaml  utils.py
python/item/model/: __init__.py  (+11 more)
sandra/: ATO matching.xlsx  Output_data TAS-FRA-007(2).csv  Output_data TAS-PAG-005(3).csv  Output_data_TAS-VEP-017.csv  Summary.md  T021.py  T021_TAS_PAG_005(3).ipynb  T022_TAS_VEP_017.ipynb  T023_TAS_FRA_007(2).ipynb  regions.yaml  sources.yaml
sandra/internal/: internal_df_data.csv
(+82 files in other folders)
