[build-system]
requires = ["build", "setuptools-scm"]

[project]
dynamic = ["version"]
readme = "README.md"
authors = [
  { name = "International Transport Energy Modeling contributors", email = "mail@transportenergy.org" },
]
maintainers = [
  { name = "Paul Natsuo Kishimoto", email = "mail@paul.kishimoto.name" },
]
name = "transport-energy"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "click",
  "iam-units",
  "openpyxl",
  "pandas",
  "pint",
  "plotnine",
  "pprint36",
  "pycountry",
  "pyyaml",
  "sdmx1 >= 2.4.0",
  "setuptools >= 41",
  "xarray",
]

[project.urls]
homepage = "https://github.com/transportenergy/database"
documentation = "https://transportenergy.readthedocs.io"

[project.optional-dependencies]
eppa = ["gdx >= 3"]
hist = ["requests"]
tests = [
  "transport-energy[doc]",
  "transport-energy[hist]",
  "pytest",
  "pytest-cov",
]
doc = ["sphinx", "sphinx-rtd-theme"]

[project.scripts]
item = "item.cli:main"

[tool.coverage.run]
omit = """
    item/historical/legacy.py
item/historical/scripts/util/*
item/model/bp.py
item/model/cli.py
item/model/eia.py
item/model/eppa5.py
item/model/exxonmobil.py
item/model/get.py
item/model/itf.py
item/model/message.py
    */tests/*
"""

[[tool.mypy.overrides]]
module = ["gdx", "plotnine", "pycountry"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """-m "not slow" --cov=item --cov-report="""
markers = [
  "slow: mark a test as slow.",
  "network: mark a test that requires a network connection.",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
