[metadata]
name = item
author = International Transport Energy Modeling group
author_email = 'mail@transportenergy.org'
long_description = file: README.md
long_description_content_type = text/x-markdown
url = https://github.com/transportenergy/database
project_urls=
    Documentation = https://transportenergy.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = item
include_package_data = True
install_requires =
    click
    openpyxl
    pandas
    pint
    plotnine
    pprint
    pycountry
    pyyaml
    sdmx1 >= 1.0.2
    setuptools >= 41
    xarray
setup_requires =
    setuptools >= 41
    setuptools_scm >= 3.5

[options.extras_require]
doc = sphinx; sphinx-rtd-theme
eppa = gdx >= 3
hist = jupyter; nbformat; requests; requests-cache
tests = pytest; pytest-cov

[options.entry_points]
console_scripts =
    item = item.cli:main

[tool:pytest]
addopts = -m "not slow" --cov=item --cov-report=
markers =
    slow: mark a test as slow.
    network: mark a test that requires a network connection.

[coverage:run]
omit =
    item/historical/legacy.py
    item/model/bp.py
    item/model/cli.py
    item/model/eia.py
    item/model/eppa5.py
    item/model/exxonmobil.py
    item/model/get.py
    item/model/itf.py
    item/model/message.py
    item/tests/*
