[metadata]
name = transport-energy
author = International Transport Energy Modeling group
author_email = mail@transportenergy.org
maintainer = Paul Natsuo Kishimoto
maintainer_email = mail@paul.kishimoto.name
long_description = file: README.md
long_description_content_type = text/x-markdown
url = https://github.com/transportenergy/database
project_urls=
    Documentation = https://transportenergy.readthedocs.io
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = item
include_package_data = True
install_requires =
    click
    iam-units
    openpyxl
    pandas
    pint
    plotnine
    pprint36
    pycountry
    pyyaml
    sdmx1 >= 1.5
    setuptools >= 41
    xarray
setup_requires =
    setuptools >= 41
    setuptools_scm >= 3.5

[options.extras_require]
doc = sphinx; sphinx-rtd-theme
eppa = gdx >= 3
hist = jupyter; nbformat; requests; requests-cache
tests = pytest; pytest-cov

[options.entry_points]
console_scripts =
    item = item.cli:main

[tool:pytest]
addopts = -m "not slow" --cov=item --cov-report=
markers =
    slow: mark a test as slow.
    network: mark a test that requires a network connection.

[coverage:run]
omit =
    item/historical/legacy.py
    item/historical/scripts/util/*
    item/model/bp.py
    item/model/cli.py
    item/model/eia.py
    item/model/eppa5.py
    item/model/exxonmobil.py
    item/model/get.py
    item/model/itf.py
    item/model/message.py
    */tests/*

[isort]
default_section = THIRDPARTY
known_first_party = item
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[flake8]
max-line-length = 88
ignore =
    # line break before binary operator
    W503


[mypy-gdx.*]
ignore_missing_imports = True
[mypy-iam_units.*]
ignore_missing_imports = True
[mypy-nbformat.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-pandas.*]
ignore_missing_imports = True
[mypy-pint.*]
ignore_missing_imports = True
[mypy-plotnine.*]
ignore_missing_imports = True
[mypy-pycountry.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-requests_cache.*]
ignore_missing_imports = True
[mypy-sdmx.*]
ignore_missing_imports = True
[mypy-setuptools.*]
ignore_missing_imports = True
